# uzyntra-api-firewall

./: .gitignore  Cargo.toml  README.md
config/: development.yaml  production.yaml
data/: api_firewall.db  security-events.jsonl
deploy/: .dockerignore  Dockerfile
docs/: PHASE_4_STATUS.md  PHASE_5_STATUS.md
scripts/: run-dev.ps1
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: development.yaml  mod.rs
src/control_plane/: mod.rs
src/core/: mod.rs
src/detection/: mod.rs
src/mitigation/: mod.rs
src/policy/: mod.rs
src/proxy/: mod.rs
src/rate_limit/: mod.rs
src/storage/: mod.rs
src/telemetry/: mod.rs
src/types/: mod.rs
